# PyWeb_HW13-Django

./: .gitignore  pyproject.toml
quotes/members/: urls.py  views.py
quotes/members/templates/authenticate/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register_user.html
quotes/quotes/: settings.py  urls.py
quotes/website/: admin.py  forms.py  models.py  scraping.py  urls.py  views.py
quotes/website/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_description.py  0003_alter_author_born_date_alter_author_description.py  0004_alter_author_fullname_alter_tag_name.py
quotes/website/static/website/: main.css  style.css
quotes/website/templates/website/: 404.html  author.html  authors.html  base.html  bb.html  bb_ok.html  index.html  quotes.html  tag.html  tags.html
quotes/website/templatetags/: filters.py
