[tool.poetry]
name = "hw13-django"
version = "0.1.0"
description = "Quotes from great people"
authors = ["UreshiiSushi <merieru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
Django = "^5.0.2"
Scrapy = "^2.11.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
